--- a/css/layout.css
+++ b/css/layout.css
@@ -395,6 +395,37 @@ body,
   background-color: #fff;
 }
 
+/* ------ input ------ */
+.form-row input {
+  display: block;
+  width: 100%;
+  height: 3em;
+  border-radius: 5px;
+  border-color: #dedede;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
+.form-row input:focus {
+  border-color: #f1ad18;
+}
+
+.form-row .input-chk label {
+  display: flex;
+  align-items: center;
+}
+
+.form-row textarea {
+  width: 100%;
+  padding: 15px;
+  border-radius: 5px;
+  border-color: #dedede;
+  font-size: 16px;
+  text-indent: 0;
+  line-height: 1.4;
+  box-sizing: border-box;
+}
+
 /* ------ button ------ */
 .btn {
   display: block;
@@ -456,6 +487,29 @@ a.btn {
 .btn-wrap {
   display: flex;
   justify-content: center;
+}
+
+.btn-attach {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 130px;
+  height: 48px;
+  border-radius: 5px;
+  border: 1px solid #aaa;
+  font-size: 16px;
+  color: #888;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+.btn-attach::before {
+  width: 19px;
+  height: 24px;
+  margin-right: 10px;
+  background: url("../images/common/icon-file.png") no-repeat center;
+  background-size: cover;
+  content: "";
 }
 
 .file {
