--- a/css/reset.css
+++ b/css/reset.css
@@ -350,6 +350,18 @@ textarea {
   -webkit-border-radius: 0;
 }
 
+input[type="file"] {
+  /* 파일 필드 숨기기 */
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
 /* placeholder 스타일 지정 */
 input::-webkit-input-placeholder {
   color: #999;
