--- a/css/sub.css
+++ b/css/sub.css
@@ -238,6 +238,9 @@
   width: 100%;
 }
 
+.grid-box-wrap .grid-box form {
+  width: 100%;
+}
 
 .grid-box-wrap .grid-box .grid-btm .btn {
   height: 2.5em;
@@ -325,6 +328,31 @@
   padding-bottom: 20px;
 }
 
+.board-write .form-row {
+  margin-bottom: 10px;
+}
+
+.board-write .form-row textarea {
+  height: 242px;
+}
+
+.board-write .attach-file {
+  display: flex;
+  align-items: center;
+  padding-top: 15px;
+  font-size: 16px;
+  color: #888;
+}
+
+.board-write .attach-file label {
+  margin-right: 5px;
+}
+
+.board-write .attach-file .file-name {
+  margin-right: 5px;
+  color: #0000ff;
+  text-decoration: underline;
+}
 
 /* ------ accordion ------ */
 .accordion-box .ac-title {
@@ -663,22 +691,8 @@
   margin-right: 0;
 }
 
-.form-row input {
-  display: block;
-  width: 100%;
+.login-wrap .form-row input {
   height: 3.715em;
-  border-radius: 5px;
-  border-color: #dedede;
-  font-size: 16px;
-}
-
-.form-row input:focus {
-  border-color: #f1ad18;
-}
-
-.form-row .input-chk label {
-  display: flex;
-  align-items: center;
 }
 
 /* ------ responsive ------ */
