--- a/css/layout.css
+++ b/css/layout.css
@@ -395,35 +395,9 @@ body,
   background-color: #fff;
 }
 
-/* ------ input ------ */
-.form-row input {
-  display: block;
-  width: 100%;
-  height: 3em;
-  border-radius: 5px;
-  border-color: #dedede;
-  font-size: 16px;
-  box-sizing: border-box;
-}
-
-.form-row input:focus {
-  border-color: #f1ad18;
-}
-
 .form-row .input-chk label {
   display: flex;
   align-items: center;
-}
-
-.form-row textarea {
-  width: 100%;
-  padding: 15px;
-  border-radius: 5px;
-  border-color: #dedede;
-  font-size: 16px;
-  text-indent: 0;
-  line-height: 1.4;
-  box-sizing: border-box;
 }
 
 /* ------ button ------ */
@@ -848,6 +822,7 @@ a.btn {
   }
 
   .footer .btn-top {
+    right: 15px;
     width: 50px;
     height: 50px;
   }
