--- a/css/reset.css
+++ b/css/reset.css
@@ -304,20 +304,29 @@ a {
 
 /* Form */
 textarea {
-  border: 1px solid #ccc;
+  width: 100%;
+  padding: 15px;
+  border-radius: 5px;
+  border: 1px solid #dedede;
+  font-size: 16px;
+  text-indent: 0;
+  line-height: 1.4;
+  box-sizing: border-box;
 }
 
 select {
-  height: 38px;
+  position: relative;
+  height: 3em;
   font-size: 13px;
   color: #000;
-  border: 1px solid #ccc;
+  border: 1px solid #dadada;
   padding: 0 45px 0 15px;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background: #fff url("/images/btn/btn-select-arrow.png") no-repeat center
-    right 15px;
+  background: #fff url("../images/common/arrow-select.png") no-repeat center right 15px;
+  border-radius: 5px;
+  font-size: 16px;
 }
 
 /* IE 10, 11의 네이티브 화살표 숨기기 */
@@ -336,18 +345,19 @@ input[type="url"],
 input[type="number"],
 input[type="date"],
 textarea {
-  /*  width: 100%; */
-  height: 38px;
-  font-size: 14px;
+  display: block;
+  width: 100%;
+  height: 3em;
+  border: 1px solid #dedede;
+  font-size: 16px;
   color: #000;
-  border: 1px solid #ccc;
   box-sizing: border-box;
   background: #fff;
   text-indent: 15px;
   transition: all 0.5s;
   vertical-align: middle;
   -webkit-appearance: none;
-  -webkit-border-radius: 0;
+  border-radius: 5px;
 }
 
 input[type="file"] {
@@ -396,7 +406,7 @@ textarea {
 select:focus,
 textarea:focus,
 input:focus {
-  border: 1px solid #727272;
+  border: 1px solid #f1ad18;
 }
 
 input[type="tel"][readonly],
@@ -409,11 +419,8 @@ input[type="text"][disabled],
 input[type="password"][disabled],
 input[type="search"][disabled],
 input[type="email"][disabled] {
-  background: #eaeaea;
-  border-color: #c0c0c0;
-  color: #666;
+  color: #999;
   -webkit-appearance: none;
-  font-size: 12px;
 }
 
 textarea[readonly],
