탭전환 함수 적용

--- a/css/apply.css
+++ b/css/apply.css
@@ -63,6 +63,7 @@
   border-radius: 5px;
   box-sizing: border-box;
   font-size: 16px;
+  cursor: pointer;
 }
 .tab-title .input-rdo input[type="radio"]:checked + label {
   border: none;
