--- a/css/sub.css
+++ b/css/sub.css
@@ -61,7 +61,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  padding:  40px 0 20px;
+  padding: 40px 0 20px;
 }
 
 .contents-wrap .con-btm .btn {
@@ -185,7 +185,7 @@
 
 .grid-box-wrap .grid-box .grid-con dl {
   margin-bottom: 12px;
-} 
+}
 
 .grid-box-wrap .grid-box .grid-con dt {
   font-size: 16px;
@@ -273,12 +273,12 @@
 }
 
 .board-list .grid-box .title {
-  overflow:hidden;
-  width:100%;
+  overflow: hidden;
+  width: 100%;
   font-size: 18px;
-  text-overflow:ellipsis;
-  white-space:nowrap;
-  word-wrap:normal;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
 }
 
 .board-list .grid-box .grid-con {
@@ -292,7 +292,7 @@
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  word-wrap:break-word; 
+  word-wrap: break-word;
   line-height: 1.4;
   height: 4.2em;
 }
@@ -394,6 +394,11 @@
 .form-table td .col-8 {
   width: calc(66.666% - 5px);
   max-width: 410px;
+}
+
+.form-table td .col-12 {
+  width: calc(99.999% - 5px);
+  max-width: 600px;
 }
 
 .form-table td input:first-child,
@@ -594,7 +599,7 @@
   border-bottom: 1px solid #ddd;
 }
 
-.contents-wrap .question-box::before, 
+.contents-wrap .question-box::before,
 .contents-wrap .answer-box::before {
   position: absolute;
   left: 0;
@@ -602,7 +607,7 @@
   font-size: 38px;
   font-weight: 700;
   color: #555;
-  margin-top: -.211em;
+  margin-top: -0.211em;
   content: "Q";
 }
 
@@ -856,7 +861,6 @@
     background: transparent;
     border: 0;
   }
-
 }
 
 @media screen and (max-width: 640px) {
@@ -895,9 +899,9 @@
   }
   .form-table td .col-sm-4 {
     width: calc(33.333% - 7px);
-  } 
+  }
 
-  .form-table td .col-8  {
+  .form-table td .col-8 {
     width: 100%;
     max-width: 100%;
   }
