--- a/css/apply.css
+++ b/css/apply.css
@@ -177,7 +177,7 @@
   color: #2155c0;
 }
 .app_comp ul {
-  width: 660px;
+  max-width: 660px;
   height: 120px;
   border: 1px solid #dedede;
   border-radius: 5px;
@@ -275,6 +275,9 @@
   }
 }
 @media screen and (max-width: 910px) {
+  .app_comp ul {
+    padding: 28px 100px;
+  }
   .album-card:nth-child(-n + 4) {
     margin: 10px 10px 10px 0;
   }
