--- a/css/sub.css
+++ b/css/sub.css
@@ -363,7 +363,6 @@
   border-top: 2px solid #000;
 }
 .form-table tr {
-  margin-bottom: 20px;
   border-bottom: 1px solid #dadada;
 }
 .form-table th,
@@ -817,7 +816,7 @@
 
 @media screen and (max-width: 768px) {
   .visual .visual-inner {
-    height: 250px;
+    height: 196px;
     padding-top: 65px;
   }
 
@@ -848,6 +847,7 @@
 
   .form-table tr {
     display: block;
+    margin-bottom: 10px;
     border: 0;
   }
 
@@ -885,8 +885,13 @@
   }
 
   .login-wrap.user-find .form-box {
-    min-height: auto;
+    min-height: 480px;
     margin: 0 0 30px;
+  }
+
+  .grid-box-wrap .grid-box {
+    width: 100%;
+    margin-right: 0;
   }
 
   .form-table td {
@@ -911,6 +916,7 @@
     width: 100%;
     margin-left: 0;
   }
+
 }
 
 @media screen and (max-width: 480px) {
@@ -940,6 +946,14 @@
 
   .login-wrap .form-box .box-foot .btn {
     font-size: 14px;
+  }
+
+  .empty-list p {
+    font-size: 16px;
+  }
+
+  .empty-list p strong {
+    font-size: 24px;
   }
 }
 
