--- a/css/reset.css
+++ b/css/reset.css
@@ -495,6 +495,57 @@ textarea[disabled] {
     inset 15px 10px -12px rgba(255, 255, 255, 0.1);
 }
 
+.input-rdo input[type="radio"] {
+  display: none;
+}
+
+.input-rdo {
+  display: flex;
+  align-items: center;
+  min-width: 150px;
+  height: 48px;
+  font-size: 18px;
+  margin-right: 10px;
+}
+
+.input-rdo label {
+  display: inline-block;
+  position: relative;
+  line-height: 30px;
+  padding-left: 33px;
+  cursor: pointer;
+}
+
+.input-rdo input[type="radio"]:checked + label:before {
+  border-color: #f1ad1a;
+}
+
+.input-rdo input[type="radio"]:checked + label:after {
+  display: inline-block;
+  content: "";
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #f1ad1a;
+  position: absolute;
+  top: 50%;
+  margin-top: -5px;
+  left: 6px;
+}
+
+.input-rdo label:before {
+  display: inline-block;
+  position: absolute;
+  content: "";
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  border: 1px solid #d3d3d3;
+  top: 50%;
+  left: 0;
+  margin-top: -11px;
+}
+
 .clear {
   clear: both;
 }
