--- a/css/sub.css
+++ b/css/sub.css
@@ -367,8 +367,9 @@
 }
 .form-table th,
 .form-table td {
-  text-align: left;
   padding: 11px 20px;
+  text-align: left;
+  box-sizing: border-box;
 }
 .form-table th {
   width: 187px;
@@ -418,20 +419,89 @@
   color: #ff5c0f;
 }
 
+.contents .txt-info {
+  margin-top: 5px;
+  text-align: right;
+  color: #888;
+  font-size: 16px;
+}
+
 .form-table td span {
   margin-left: 10px;
   color: #888;
 }
 
-/* ------ tab ------ */
 td.tab-title {
   padding: 13px 30px;
 }
 
+
+td.tab-con-wrap {
+  padding: 15px 30px;
+}
+
+/* ------ tab ------ */
 .tab-title .input-rdo {
-  margin-right: 10px;
   width: calc(33.333% - 6.666px);
   max-width: 180px;
+  min-width: auto;
+  margin-right: 10px;
+}
+
+.tab-title .input-rdo:last-child {
+  margin-right: 0;
+}
+
+.tab-title .input-rdo label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 43px;
+  padding-left: 0;
+  line-height: 43px;
+  text-align: center;
+  border: 1px solid #d8d8d8;
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.tab-title .input-rdo input[type="radio"]:checked + label {
+  border: 0;
+  background-color: #f1ad1a;
+  color: #fff;
+  position: relative;
+}
+
+.tab-title .input-rdo label::before,
+.tab-title .input-rdo label::after {
+  display: none;
+}
+
+.tab-title .input-rdo input[type="radio"]:checked + label::before {
+  position: absolute;
+  display: inline-block;
+  content: "";
+  width: 13px;
+  height: 9px;
+  border-style: solid;
+  border-width: 0px 0 2px 2px;
+  border-color: #fff;
+  border-radius: 0;
+  transform: rotateZ(-45deg);
+  left: 20px;
+  top: 23px;
+}
+
+.tab-con {
+  display: none;
+  width: 100%;
+}
+
+.tab-con.on {
+  display: block;
 }
 
 /* ------ accordion ------ */
@@ -509,6 +579,129 @@ td.tab-title {
 
 .accordion-box li .ac-con .file::before {
   margin-right: 10px;
+}
+
+
+/* ------ login-wrap ------ */
+.login-wrap {
+  overflow: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  background-image: url(../images/common/bg-login.jpg);
+  box-sizing: border-box;
+}
+
+.login-wrap .form-box {
+  -moz-box-shadow: 0 20px 50px 0 rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 20px 50px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 20px 50px 0 rgba(0, 0, 0, 0.3);
+}
+
+.login-wrap .form-box {
+  position: relative;
+  width: 90%;
+  max-width: 570px;
+  min-height: 530px;
+  padding: 50px;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.8);
+  box-sizing: border-box;
+}
+
+.login-wrap .form-box .box-head {
+  padding-bottom: 40px;
+}
+
+.login-wrap .form-box .box-head h2 {
+  margin-top: -0.214em;
+  margin-bottom: -0.179em;
+  font-size: 28px;
+  font-weight: normal;
+  font-weight: 350;
+  line-height: 1.286;
+}
+
+.login-wrap .form-box .box-head h2 strong {
+  display: block;
+}
+
+.login-wrap .form-box .box-head h2 + p {
+  margin-top: 0.722em;
+  margin-bottom: -10px;
+  font-size: 18px;
+  color: #555;
+}
+
+.login-wrap .form-box .box-body {
+  margin-bottom: 100px;
+}
+
+.login-wrap .form-box .box-foot {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 0 50px 50px;
+  box-sizing: border-box;
+}
+
+.login-wrap .form-box .box-foot .btn {
+  width: 100%;
+  margin-top: 5px;
+}
+
+.login-wrap .form-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.login-wrap .form-row.sp-btw {
+  justify-content: space-between;
+}
+
+.login-wrap .form-row.sp-btw .input-wrap {
+  width: auto;
+}
+
+.login-wrap .form-box .result {
+  padding-top: 10px;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #ff0000;
+  text-align: center;
+}
+
+.login-wrap .form-box .result em {
+  font-size: 20px;
+}
+
+.login-wrap.user-find .form-box {
+  max-width: 500px;
+  min-height: 563px;
+  margin: 0 20px;
+}
+
+.login-wrap .input-wrap + .btn {
+  margin-left: 10px;
+}
+
+.login-wrap .form-row .input-wrap {
+  width: 100%;
+}
+.login-wrap .form-row.col-half .input-wrap {
+  width: 50%;
+  margin-right: 10px;
+}
+
+.login-wrap .form-row.col-half .input-wrap:last-child {
+  margin-right: 0;
+}
+
+.login-wrap .form-row input {
+  height: 3.715em;
 }
 
 /* ------ 샘플보기페이지 ------ */
@@ -654,127 +847,68 @@ td.tab-title {
   color: #000;
 }
 
-/* ------ login-wrap ------ */
-.login-wrap {
-  overflow: auto;
+/* ------ 신청하기 ------ */
+.offer-con .tab-con.on {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 20px;
-  background-image: url(../images/common/bg-login.jpg);
-  box-sizing: border-box;
 }
 
-.login-wrap .form-box {
-  -moz-box-shadow: 0 20px 50px 0 rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 0 20px 50px 0 rgba(0, 0, 0, 0.3);
-  box-shadow: 0 20px 50px 0 rgba(0, 0, 0, 0.3);
-}
-
-.login-wrap .form-box {
-  position: relative;
-  width: 90%;
-  max-width: 570px;
-  min-height: 530px;
-  padding: 50px;
-  border-radius: 20px;
-  background-color: rgba(255, 255, 255, 0.8);
-  box-sizing: border-box;
-}
-
-.login-wrap .form-box .box-head {
-  padding-bottom: 40px;
-}
-
-.login-wrap .form-box .box-head h2 {
-  margin-top: -0.214em;
-  margin-bottom: -0.179em;
-  font-size: 28px;
-  font-weight: normal;
-  font-weight: 350;
-  line-height: 1.286;
-}
-
-.login-wrap .form-box .box-head h2 strong {
-  display: block;
-}
-
-.login-wrap .form-box .box-head h2 + p {
-  margin-top: 0.722em;
-  margin-bottom: -10px;
-  font-size: 18px;
-  color: #555;
-}
-
-.login-wrap .form-box .box-body {
-  margin-bottom: 100px;
-}
-
-.login-wrap .form-box .box-foot {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  padding: 0 50px 50px;
-  box-sizing: border-box;
-}
-
-.login-wrap .form-box .box-foot .btn {
-  width: 100%;
-  margin-top: 5px;
-}
-
-.login-wrap .form-row {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.login-wrap .form-row.sp-btw {
-  justify-content: space-between;
-}
-
-.login-wrap .form-row.sp-btw .input-wrap {
-  width: auto;
-}
-
-.login-wrap .form-box .result {
-  padding-top: 10px;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #ff0000;
-  text-align: center;
-}
-
-.login-wrap .form-box .result em {
-  font-size: 20px;
-}
-
-.login-wrap.user-find .form-box {
-  max-width: 500px;
-  min-height: 563px;
-  margin: 0 20px;
-}
-
-.login-wrap .input-wrap + .btn {
-  margin-left: 10px;
-}
-
-.login-wrap .form-row .input-wrap {
-  width: 100%;
-}
-.login-wrap .form-row.col-half .input-wrap {
+.offer-con .offer-list {
   width: 50%;
-  margin-right: 10px;
 }
 
-.login-wrap .form-row.col-half .input-wrap:last-child {
-  margin-right: 0;
+.offer-con .offer-list li {
+  padding-left: 25px;
+  font-size: 16px;
+  position: relative;
+  line-height: 30px;
 }
 
-.login-wrap .form-row input {
-  height: 3.715em;
+.offer-con .offer-list li:before {
+  position: absolute;
+  display: inline-block;
+  content: "";
+  width: 10px;
+  height: 7px;
+  border-style: solid;
+  border-width: 0px 0 2px 2px;
+  border-color: #dc6117;
+  transform: rotateZ(-45deg);
+  left: 0;
+  top: 7px;
 }
+
+.offer-con .offer-list li.dis {
+  color: #d8d8d8;
+  text-decoration: line-through;
+}
+
+.offer-con .offer-list li.dis:before {
+  display: none;
+}
+
+.offer-con .offer-list:last-child {
+  border-left: 1px solid #dadada;
+}
+
+.offer-con .offer-list:last-child li:before {
+  display: none;
+}
+
+.form-table .price {
+  font-size: 16px;
+  line-height: 45px;
+}
+
+.form-table .price span {
+  margin-left: 0;
+  color: #888;
+}
+
+.form-table .price strong {
+  font-size: 24px;
+  color: #ff0000;
+}
+
 
 /* ------ responsive ------ */
 @media screen and (min-width: 1921px) {
@@ -847,14 +981,6 @@ td.tab-title {
     word-wrap: break-word;
   }
 
-  .sub-wrap .contents-wrap {
-    padding: 70px 15px 110px;
-  }
-
-  .user-find .form-box {
-    margin: 0 10px;
-  }
-
   .form-table {
     border-top: 0;
   }
@@ -872,8 +998,17 @@ td.tab-title {
 
   .form-table th {
     display: block;
+    width: 100%;
     background: transparent;
     border: 0;
+  }
+
+  .sub-wrap .contents-wrap {
+    padding: 70px 15px 110px;
+  }
+
+  .user-find .form-box {
+    margin: 0 10px;
   }
 
   .sample-list ul {
@@ -887,6 +1022,14 @@ td.tab-title {
 
   .sample-list li:nth-child(2n) {
     margin-right: 0;
+  }
+
+  td.tab-title {
+    padding: 10px 0;
+  }
+
+  td.tab-con-wrap {
+    padding: 10px 0
   }
 }
 
@@ -944,6 +1087,9 @@ td.tab-title {
     margin-left: 0;
   }
 
+  .form-table .price span {
+    display: inline;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -992,6 +1138,10 @@ td.tab-title {
     width: 149px;
     height: 298px;
     padding: 26px 7px 33px;
+  }
+
+  .tab-title .input-rdo input[type="radio"]:checked + label::before {
+    display: none;
   }
 }
 
